[tool.poetry]
name = "smart-vendor"
version = "0.1.0"
description = ""
authors = ["Njeru Cyrus <njerucyrus5@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
python-multipart = "^0.0.9"
requests = "^2.31.0"
cryptography = "^42.0.5"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
